--- a/authentication/authentication.css
+++ b/authentication/authentication.css
@@ -15,3 +15,15 @@
 .custom__input {
     margin-top: 1rem;
 }
+
+.password-container {
+    position: relative;
+}
+
+.eye-icon {
+    position: absolute;
+    margin: 0 auto;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    right: 0;
+}
