--- a/common.css
+++ b/common.css
@@ -91,3 +91,28 @@ a {
 .text-underline {
     text-decoration: underline;
 }
+
+.text-center {
+    text-align: center;
+}
+
+
+/* footer */
+
+.footer-container {
+    margin-top: 5rem;
+    display: flex;
+    padding: 1.2rem 4rem;
+    background-color: var(--sky-blue);
+    color: var(--lighter-white-color);
+    justify-content: center;
+    font-size: 3rem;
+}
+
+.footer-list-icon {
+    margin-left: 2rem;
+}
+
+.footer-list-icon i {
+    color: var(--lighter-white-color);
+}
