--- a/index.css
+++ b/index.css
@@ -43,10 +43,15 @@
     position: relative;
 }
 
+.banner-container img {
+    width: 100%;
+}
+
 .image-overlay-text {
     position: absolute;
-    top: 2rem;
+    top: 0rem;
     transform: translate(10%, 50%);
+    color: var(--sky-blue);
 }
 
 .image-overlay-text .fa-arrow-right {
@@ -77,4 +82,16 @@
     margin-right: 1.5rem;
     box-shadow: 0 0.1rem 0.9rem 0.1rem var(--dark-grey);
     box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 5%);
+}
+
+@media screen and (max-width: 750px) {
+    .category__card {
+        flex: 0 0 25%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .category__card {
+        flex: 0 0 40%;
+    }
 }
